--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  
+  --foreground: #0b0b0b;
 }
 
 @theme inline {
@@ -15,12 +16,24 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #695555;
   }
 }
 
 body {
-  background: var(--background);
+  
+  background: #CAEDDB;
+  background: linear-gradient(85deg, rgba(202, 237, 219, 1) 0%, rgba(225, 243, 250, 1) 53%, rgba(202, 237, 219, 1) 100%);
+  
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+@keyframes marquee {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-50%); }
+}
+
+.animate-marquee {
+  display: inline-flex;
+  animation: marquee 12s linear infinite;
 }
